SPM Keyboard: Allow contents size set after load.

Currently we wait for the keyboard contents size to be set before
invoking the load callback in
ChromeKeyboardWebContents::MaybeRunLoadCallback().

With crrev.com/c/1403923 this is no longer necessary,
AshKeyboardUI::AshKeyboardView observes the embedding host which
receives an event when the window bounds changes, correctly setting
the size after load.

This makes the keyboard startup flow more robust and fixes
tast.ui.VirtualKeyboardOmnibox for SPM.

Bug: 921410
Change-Id: I165e23f5c1f19d9dbb2f965d425a57eb719d7e22
Reviewed-on: https://chromium-review.googlesource.com/c/1415811
Reviewed-by: James Cook <jamescook@chromium.org>
Reviewed-by: Darren Shen <shend@chromium.org>
Reviewed-by: Jun Mukai <mukai@chromium.org>
Commit-Queue: Steven Bennetts <stevenjb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#623413}
Former-commit-id: 10d0f2afca046fcf4d35db0b5cf91836322928d2